# boniu-crawler

./: .gitignore  BONIU_CRAWLER_README.md  PROJECT_SUMMARY.md  README.md  README_NEW.md  README_TRANSLATOR.md  TRANSLATION_QUICKSTART.md  TRANSLATION_UPDATE_SUMMARY.md  boniu_crawler.py  config.py  crawler.py  debug_page.html  debug_page2.html  env.dev  env.example  env.prd  logger.py  main.py  pyproject.toml  requests_crawler.py  requirements.txt  run_scheduled_crawler.bat  setup_cron.sh  setup_windows_task.ps1  test_boniu_crawler.py  test_website.py  utils.py
config/: development.yaml  production.yaml  translator.yaml
config/sites/: boniu.yaml
crawler_pkg/: __init__.py
crawler_pkg/core/: base.py  requests_impl.py
crawler_pkg/site_boniu/: crawler.py
docs/: REFACTOR_SUMMARY.md  api.md  architecture.md  circle_translation_guide.md  deployment.md  scheduled_task_guide.md  translation_guide.md  translation_implementation.md  translator.md
prd_test/: run_prd_test.py
prd_test/outputs/: list_fid89_p1_20250908_062544.html  meta_fid89_p1_20250908_062544.json
scripts/: 2025_10_14_add_content_summary_fields.sql  README_download_history_avatars.md  add_circle_translation_fields.sql  add_content_summary_fields.sql  add_translation_fields.sql  create_execution_log_table.sql  demo.py  download_history_avatars.py  fix_content_field_length.sql  insert_boniu_mysql.py  migrate_add_execution_fields.sql  test_translation_integration.py  translate_circle_data.py  translate_history_data.py  translator_demo.py
src/: __init__.py
src/cli/: main.py
src/crawler/: __init__.py
src/crawler/config/: __init__.py  settings.py
src/crawler/core/: __init__.py  base.py  requests_impl.py
src/crawler/sites/: __init__.py
src/crawler/sites/boniu/: __init__.py  crawler.py
src/crawler/utils/: __init__.py  anti_detect.py  db.py  http.py  image_downloader.py  parser.py  storage.py  translator.py  translator_config.py
src/scheduler/: __init__.py  execution_logger.py  scheduled_crawler.py
temp/: README_summary_scripts.md  generate_summaries.py  quick_summary_update.py  update_summaries.sql
tests/: conftest.py
tests/integration/: test_fixed_crawler.py
tests/unit/: test_translator.py  test_utils.py
